# demons

./: .gitignore  CMakeLists.txt  README.md  plotfield.gnu
apresentacao/: apresentacao.aux  apresentacao.fdb_latexmk  apresentacao.fls  apresentacao.tex  highlitghs.txt
apresentacao/relatorio1/: apre.tex
cmakeTools/: Findniftilib.cmake
src/: asymmetricdemons.cxx  asymmetricdemons.h  asymmetricdemonsfunction.cxx  asymmetricdemonsfunction.h  callDemonmodule.cxx  calldemon.cxx  calldemon.h  conf.demon  debug.cxx  debug.h  deform.cxx  deform.h  deformation.cxx  deformation.h  demon.cxx  demon.h  demon.py  demons.cxx  demons.h  demonsfunction.cxx  demonsfunction.h  gradient.cxx  gradient.h  image.h  imagefunctions.cxx  imagefunctions.h  interpolation.cxx  interpolation.h  main.cxx  profiler.h  setup.py  symmetricdemons.cxx  symmetricdemons.h  symmetricdemonsfunction.cxx  symmetricdemonsfunction.h  tarefas.txt  vectorfield.cxx  vectorfield.h
src/image/: image.hpp
src/image/io/: dicom.hpp  io.hpp
